--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet"> 
+    <script defer src="main.js"></script>
 </head>
 <body>
     <main>
@@ -52,9 +53,9 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Braços</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" id="subtrair">-</buttom>
+                            <input type="text" class="controle-contador" value="00" id="braco">
+                            <buttom class="controle-ajuste" id="somar">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
